// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IconButton > renders 1`] = `
<button
  aria-label="Delete"
  class="rounded-box p-1 text-tip transition-colors hover:text-third focus-visible:text-third disabled:cursor-not-allowed disabled:opacity-40 disabled:hover:text-tip"
  title="Delete"
  type="button"
>
  <svg
    aria-hidden="true"
    class="h-4 w-4"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.75"
    viewBox="0 0 24 24"
  >
    <path
      d="M4 7h16"
    />
    <path
      d="M9 7V4h6v3"
    />
    <path
      d="m6 7 1 13h10l1-13"
    />
    <path
      d="M10 11v6"
    />
    <path
      d="M14 11v6"
    />
  </svg>
</button>
`;

exports[`IconButton > renders disabled 1`] = `
<button
  aria-label="Delete"
  class="rounded-box p-1 text-tip transition-colors hover:text-third focus-visible:text-third disabled:cursor-not-allowed disabled:opacity-40 disabled:hover:text-tip"
  disabled=""
  title="Delete"
  type="button"
>
  <svg
    aria-hidden="true"
    class="h-4 w-4"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="1.75"
    viewBox="0 0 24 24"
  >
    <path
      d="M4 7h16"
    />
    <path
      d="M9 7V4h6v3"
    />
    <path
      d="m6 7 1 13h10l1-13"
    />
    <path
      d="M10 11v6"
    />
    <path
      d="M14 11v6"
    />
  </svg>
</button>
`;
